--- a/ad.html
+++ b/ad.html
@@ -1,47 +1,11 @@
 <meta charset='utf-8'>
 <style>
-body {
-    padding: 10px;
-    padding-top: 100px;
-    padding-left: 320px;
-    padding-right: 320px;
-}
-.adsbygoogle-top {
-    height: 90px;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-}
-.adsbygoogle-300x600 {
-    width: 300px;
+#ddee-be-content-body {
     position: absolute;
     top: 100px;
+    left: 310px;
 }
 </style>
-
-<div class="adsbygoogle-300x600" style="left:0px">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- htm.im 300x600 -->
-<ins class="adsbygoogle"
-     style="display:block;width:300px;height:600px"
-     data-ad-client="ca-pub-0139896083561460"
-     data-ad-slot="1127810049"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-<div class="adsbygoogle-300x600" style="right:0px">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- htm.im 300x600 -->
-<ins class="adsbygoogle"
-     style="display:block;width:300px;height:600px"
-     data-ad-client="ca-pub-0139896083561460"
-     data-ad-slot="1127810049"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-<div class="adsbygoogle-top">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- htm.im970x90 -->
 <ins class="adsbygoogle"
@@ -51,4 +15,23 @@ body {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- htm.im 300x600 -->
+<ins class="adsbygoogle"
+     style="display:block;width:300px;height:600px"
+     data-ad-client="ca-pub-0139896083561460"
+     data-ad-slot="1127810049"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- htm.im 300x600 -->
+<ins class="adsbygoogle"
+     style="display:block;width:300px;height:600px"
+     data-ad-client="ca-pub-0139896083561460"
+     data-ad-slot="1127810049"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
